--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -324,7 +324,7 @@
           <ul class="treeview-menu">
             <li><a href="pages/charts/chartjs.html"><i class="fa fa-users text-aqua"></i> View Records</a></li>
             <li><a href="pages/charts/morris.html"><i class="fa fa-pencil text-orange"></i> Edit Record</a></li>
-            <li><a href="pages/charts/flot.html"><i class="fa fa-plus text-aqua"></i> Add Record</a></li>            
+            <li><a href="pages/charts/flot.html"><i class="fa fa-plus text-green"></i> Add Record</a></li>            
           </ul>
         </li>
         
