--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -372,10 +372,10 @@
         </li>
 		
         <li class="header" style="color: white; letter-spacing: 2px; background-color: darkSlateGray;"><span>CONTACT US</span></li>
-        <li><a href="#"><i class="glyphicon glyphicon-phone-alt text-purple"></i><span>:&nbsp;&nbsp;&nbsp; 42368247</span></a></li>
-        <li><a href="#"><i class="glyphicon glyphicon-phone text-red"></i><span>:&nbsp;&nbsp;&nbsp; +639194259863</span></a></li>
-		<li><a href="#"><i class="glyphicon glyphicon-envelope text-yellow"></i><span>:&nbsp;&nbsp;&nbsp; hot@hotmail.com</span></a></li>
-		<li><a href="#"><i class="fa fa-skype text-aqua"></i><span>:&nbsp;&nbsp;&nbsp; clinic.hospital</span></a></li>
+        <li><a><i class="glyphicon glyphicon-phone-alt text-purple"></i><span>:&nbsp;&nbsp;&nbsp; 42368247</span></a></li>
+        <li><a><i class="glyphicon glyphicon-phone text-red"></i><span>:&nbsp;&nbsp;&nbsp; +639194259863</span></a></li>
+		<li><a><i class="glyphicon glyphicon-envelope text-yellow"></i><span>:&nbsp;&nbsp;&nbsp; hot@hotmail.com</span></a></li>
+		<li><a><i class="fa fa-skype text-aqua"></i><span>:&nbsp;&nbsp;&nbsp; clinic.hospital</span></a></li>
       </ul>
     </section>
     <!-- /.sidebar -->
