--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -44,7 +44,7 @@
       <!-- mini logo for sidebar mini 50x50 pixels -->
       <span class="logo-mini"><b>A</b>LT</span>
       <!-- logo for regular state and mobile devices -->
-      <span class="logo-lg"><b>Clinica Hospital</b></span>
+      <span class="logo-lg" style="margin: 0 0 0 -2.5em;"><b>Clinica Hospital</b></span>
     </a>
     <!-- Header Navbar: style can be found in header.less -->
     <nav class="navbar navbar-static-top">
@@ -376,6 +376,8 @@
         <li><a><i class="glyphicon glyphicon-phone text-red"></i><span>:&nbsp;&nbsp;&nbsp; +639194259863</span></a></li>
 		<li><a><i class="glyphicon glyphicon-envelope text-yellow"></i><span>:&nbsp;&nbsp;&nbsp; hot@hotmail.com</span></a></li>
 		<li><a><i class="fa fa-skype text-aqua"></i><span>:&nbsp;&nbsp;&nbsp; clinic.hospital</span></a></li>
+		
+		<li class="developer" style="letter-spacing: 2px; margin-top: 0.8em;"><a href="#" style="color: slateGray;"><span>About the Developer</span></a></li>
       </ul>
     </section>
     <!-- /.sidebar -->
@@ -422,14 +424,14 @@
           <!-- /.box -->
 
           <!-- quick email widget -->
-          <div class="box box-info">
+          <div class="box box-info" style="border-top-color: darkSlateGray !important;">
             <div class="box-header">
-              <i class="fa fa-envelope"></i>
+              <i class="fa fa-envelope text-purple"></i>
 
               <h3 class="box-title">Quick Email</h3>
               <!-- tools box -->
               <div class="pull-right box-tools">
-                <button type="button" class="btn btn-info btn-sm" data-widget="remove" data-toggle="tooltip"
+                <button type="button" class="btn btn-danger btn-sm" data-widget="remove" data-toggle="tooltip"
                         title="Remove">
                   <i class="fa fa-times"></i></button>
               </div>
@@ -438,20 +440,21 @@
             <div class="box-body">
               <form action="#" method="post">
                 <div class="form-group">
-                  <input type="email" class="form-control" name="emailto" placeholder="Email to:">
+                  <input type="email" class="form-control glowing-border" name="emailto" placeholder="Email to:" style="border-width: 0.5px;">
                 </div>
                 <div class="form-group">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject">
+                  <input type="text" class="form-control glowing-border" name="subject" placeholder="Subject" style="border-width: 0.5px;">
                 </div>
                 <div>
-                  <textarea class="textarea" placeholder="Message"
-                            style="width: 100%; height: 125px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px;"></textarea>
+                   <textarea id="txtEmail" class="textarea glowing-border" placeholder="Message"
+					style="width: 100%; height: 125px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px; border-width: 0.5px;">
+				   </textarea>
                 </div>
               </form>
             </div>
             <div class="box-footer clearfix">
               <button type="button" class="pull-right btn btn-default" id="sendEmail">Send
-                <i class="fa fa-arrow-circle-right"></i></button>
+                <i class="fa fa-arrow-circle-right text-green"></i></button>
             </div>
           </div>
 
@@ -722,6 +725,20 @@
 		<script src="{{ asset('AdminLTE/dist/js/pages/dashboard.js') }}"></script>
 		<!-- AdminLTE for demo purposes -->
 		<script src="{{ asset('AdminLTE/dist/js/demo.js') }}"></script>
+		
+		<script>
+			$(document).ready(function()
+			{
+				$("#sendEmail").click(function()
+				{
+					var garbage = $("#txtEmail").val();
+					var clean = $.trim(garbage.replace("<p>", ""));
+					clean = clean.replace("</p>", "");
+					clean = clean.replace(/&nbsp;/g, '');
+					console.log(clean);
+				});
+			});
+		</script>
 		{% endblock %}
     </body>
 </html>
