--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -1,5 +1,196 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}	
-{{ number }}
+{% block body %}
+    {% block header %}
+        {% include 'Main/header.html.twig' %}
+    {% endblock %}
+    
+    {% block main_nav %}
+        <!-- Left side column. contains the logo and sidebar -->
+        <aside class="main-sidebar" style="background-color: #000000;">
+            <!-- sidebar: style can be found in sidebar.less -->
+            <section class="sidebar">
+                <!-- Sidebar user panel -->
+
+                <!-- /.search form -->
+                <!-- sidebar menu: : style can be found in sidebar.less -->
+                <ul class="sidebar-menu" data-widget="tree">
+                    <li class="header "style="color: white; letter-spacing: 2px; background-color: darkSlateGray;">MAIN NAVIGATION &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<i class="fa fa-hospital-o"></i></li>
+
+                    <li class="treeview">
+                        <a href="#">
+                            <i class="fa fa-h-square"></i>
+                            <span>Patients</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li><a href="pages/charts/chartjs.html"><i class="fa fa-users text-aqua"></i> View Records</a></li>
+                            <li><a href="pages/charts/morris.html"><i class="fa fa-pencil text-orange"></i> Edit Record</a></li>
+                            <li><a href="pages/charts/flot.html"><i class="fa fa-plus text-green"></i> Add Record</a></li>            
+                        </ul>
+                    </li>
+
+                    <li><a href="https://adminlte.io/docs"><i class="fa fa-pie-chart"></i> <span>Activities</span></a></li>
+
+                    <li class="treeview">
+                        <a href="#">
+                            <i class="fa fa-edit"></i> <span>Forms</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li><a href="pages/forms/general.html"><i class="fa fa-tags text-red"></i> SSS</a></li>
+                            <li><a href="pages/forms/advanced.html"><i class="fa fa-tags text-aqua"></i> PagIbig</a></li>
+                            <li><a href="pages/forms/editors.html"><i class="fa fa-tags text-orange"></i> Philhealth</a></li>
+                            <li><a href="pages/forms/editors.html"><i class="fa fa-tags text-purple"></i> Health Card</a></li>
+                        </ul>
+                    </li>
+
+                    <li><a href="https://adminlte.io/docs"><i class="fa fa-user-md"></i> <span>Doctors</span></a></li>
+
+                    <li>
+                        <a href="pages/calendar.html">
+                            <i class="fa fa-calendar"></i> <span>Calendar</span>
+                            <span class="pull-right-container">
+                                <small class="label pull-right bg-red">3</small>
+                                <small class="label pull-right bg-blue">17</small>
+                            </span>
+                        </a>
+                    </li>        
+
+                    <li class="treeview">
+                        <a href="#">
+                            <i class="fa fa-cog text-blue"></i> <span>Admin Panel</span>
+                            <span class="pull-right-container">
+                                <i class="fa fa-angle-left pull-right"></i>
+                            </span>
+                        </a>
+                        <ul class="treeview-menu">
+                            <li><a href="pages/forms/general.html"><i class="fa fa-user-plus text-aqua"></i> Add User</a></li>
+                            <li><a href="pages/forms/general.html"><i class="fa fa-edit text-green"></i> Edit User</a></li>
+                            <li><a href="pages/forms/general.html"><i class="fa fa-user-times text-red"></i> Delete User</a></li>
+                        </ul>
+                    </li>
+
+                    <li class="header" style="color: white; letter-spacing: 2px; background-color: darkSlateGray;"><span>CONTACT US</span></li>
+                    <li><a><i class="glyphicon glyphicon-phone-alt text-purple"></i><span>:&nbsp;&nbsp;&nbsp; 42368247</span></a></li>
+                    <li><a><i class="glyphicon glyphicon-phone text-red"></i><span>:&nbsp;&nbsp;&nbsp; +639194259863</span></a></li>
+                    <li><a><i class="glyphicon glyphicon-envelope text-yellow"></i><span>:&nbsp;&nbsp;&nbsp; hot@hotmail.com</span></a></li>
+                    <li><a><i class="fa fa-skype text-aqua"></i><span>:&nbsp;&nbsp;&nbsp; clinic.hospital</span></a></li>
+
+                    <li class="developer" style="letter-spacing: 2px; margin-top: 0.8em;"><a href="#" style="color: slateGray;"><span>About the Developer</span></a></li>
+                </ul>
+            </section>
+            <!-- /.sidebar -->
+        </aside>
+    {% endblock %}
+
+    {% block main %}
+        <!-- Content Wrapper. Contains page content -->
+        <div class="content-wrapper">
+            <!-- Content Header (Page header) -->
+            <section class="content-header">
+                <h1>
+                    Dashboard
+                    <small>Control panel</small>
+                </h1>
+                <ol class="breadcrumb">
+                    <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+                    <li class="active">Dashboard</li>
+                </ol>
+            </section>
+
+            <!-- Main content -->
+            <section class="content">
+                <!-- Small boxes (Stat box) -->
+                <div class="row">        
+                    <!-- ./col -->
+
+                    <!-- ./col -->
+
+                    <!-- ./col -->
+
+                    <!-- ./col -->
+                </div>
+                <!-- /.row -->
+                <!-- Main row -->
+                <div class="row">
+                    <!-- Left col -->
+                    <section class="col-lg-7 connectedSortable">
+                        <!-- Custom tabs (Charts with tabs)-->          
+                        <!-- /.nav-tabs-custom -->
+
+                        <!-- Chat box -->          
+                        <!-- /.box (chat box) -->
+
+                        <!-- TO DO List -->          
+                        <!-- /.box -->
+
+                        <!-- quick email widget -->
+                        <div class="box box-info" style="border-top-color: darkSlateGray !important;">
+                            <div class="box-header">
+                                <i class="fa fa-envelope text-purple"></i>
+
+                                <h3 class="box-title">Quick Email</h3>
+                                <!-- tools box -->
+                                <div class="pull-right box-tools">
+                                    <button type="button" class="btn btn-danger btn-sm" data-widget="remove" data-toggle="tooltip"
+                                            title="Remove">
+                                        <i class="fa fa-times"></i></button>
+                                </div>
+                                <!-- /. tools -->
+                            </div>
+                            <div class="box-body">
+                                <form action="#" method="post">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control glowing-border" name="emailto" placeholder="Email to:" style="border-width: 0.5px;">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control glowing-border" name="subject" placeholder="Subject" style="border-width: 0.5px;">
+                                    </div>
+                                    <div>
+                                        <textarea id="txtEmail" class="textarea glowing-border" placeholder="Message"
+                                                  style="width: 100%; height: 125px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px; border-width: 0.5px;">
+                                        </textarea>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="box-footer clearfix">
+                                <button type="button" class="pull-right btn btn-default" id="sendEmail">Send
+                                    <i class="fa fa-arrow-circle-right text-green"></i></button>
+                            </div>
+                        </div>
+
+                    </section>
+                    <!-- /.Left col -->
+                    <!-- right col (We are only adding the ID to make the widgets sortable)-->
+                    <section class="col-lg-5 connectedSortable">
+
+                        <!-- Map box -->
+                        <!-- /.box -->
+
+                        <!-- solid sales graph -->          
+                        <!-- /.box -->
+
+                        <!-- Calendar -->          
+                        <!-- /.box -->
+
+                    </section>
+                    <!-- right col -->
+                </div>
+                <!-- /.row (main row) -->
+
+            </section>
+            <!-- /.content -->
+        </div>
+        <!-- /.content-wrapper -->
+    {% endblock %}
+    
+    {% block footer %}
+        {% include 'Main/footer.html.twig' %}
+    {% endblock %}
+
 {% endblock %}	
