--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -28,7 +28,7 @@
                         <ul class="treeview-menu">
                             <li><a href="pages/charts/chartjs.html"><i class="fa fa-users text-aqua"></i> View Records</a></li>
                             <li><a href="pages/charts/morris.html"><i class="fa fa-pencil text-orange"></i> Edit Record</a></li>
-                            <li><a href="pages/charts/flot.html"><i class="fa fa-plus text-green"></i> Add Record</a></li>            
+                            <li><a href="{{ path('add') }}"><i class="fa fa-plus text-green"></i> Add Record</a></li>            
                         </ul>
                     </li>
 
@@ -87,110 +87,12 @@
             <!-- /.sidebar -->
         </aside>
     {% endblock %}
-
-    {% block main %}
-        <!-- Content Wrapper. Contains page content -->
-        <div class="content-wrapper">
-            <!-- Content Header (Page header) -->
-            <section class="content-header">
-                <h1>
-                    Dashboard
-                    <small>Control panel</small>
-                </h1>
-                <ol class="breadcrumb">
-                    <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-                    <li class="active">Dashboard</li>
-                </ol>
-            </section>
-
-            <!-- Main content -->
-            <section class="content">
-                <!-- Small boxes (Stat box) -->
-                <div class="row">        
-                    <!-- ./col -->
-
-                    <!-- ./col -->
-
-                    <!-- ./col -->
-
-                    <!-- ./col -->
-                </div>
-                <!-- /.row -->
-                <!-- Main row -->
-                <div class="row">
-                    <!-- Left col -->
-                    <section class="col-lg-7 connectedSortable">
-                        <!-- Custom tabs (Charts with tabs)-->          
-                        <!-- /.nav-tabs-custom -->
-
-                        <!-- Chat box -->          
-                        <!-- /.box (chat box) -->
-
-                        <!-- TO DO List -->          
-                        <!-- /.box -->
-
-                        <!-- quick email widget -->
-                        <div class="box box-info" style="border-top-color: darkSlateGray !important;">
-                            <div class="box-header">
-                                <i class="fa fa-envelope text-purple"></i>
-
-                                <h3 class="box-title">Quick Email</h3>
-                                <!-- tools box -->
-                                <div class="pull-right box-tools">
-                                    <button type="button" class="btn btn-danger btn-sm" data-widget="remove" data-toggle="tooltip"
-                                            title="Remove">
-                                        <i class="fa fa-times"></i></button>
-                                </div>
-                                <!-- /. tools -->
-                            </div>
-                            <div class="box-body">
-                                <form action="#" method="post">
-                                    <div class="form-group">
-                                        <input type="email" class="form-control glowing-border" name="emailto" placeholder="Email to:" style="border-width: 0.5px;">
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control glowing-border" name="subject" placeholder="Subject" style="border-width: 0.5px;">
-                                    </div>
-                                    <div>
-                                        <textarea id="txtEmail" class="textarea glowing-border" placeholder="Message"
-                                                  style="width: 100%; height: 125px; font-size: 14px; line-height: 18px; border: 1px solid #dddddd; padding: 10px; border-width: 0.5px;">
-                                        </textarea>
-                                    </div>
-                                </form>
-                            </div>
-                            <div class="box-footer clearfix">
-                                <button type="button" class="pull-right btn btn-default" id="sendEmail">Send
-                                    <i class="fa fa-arrow-circle-right text-green"></i></button>
-                            </div>
-                        </div>
-
-                    </section>
-                    <!-- /.Left col -->
-                    <!-- right col (We are only adding the ID to make the widgets sortable)-->
-                    <section class="col-lg-5 connectedSortable">
-
-                        <!-- Map box -->
-                        <!-- /.box -->
-
-                        <!-- solid sales graph -->          
-                        <!-- /.box -->
-
-                        <!-- Calendar -->          
-                        <!-- /.box -->
-
-                    </section>
-                    <!-- right col -->
-                </div>
-                <!-- /.row (main row) -->
-
-            </section>
-            <!-- /.content -->
-        </div>
-        <!-- /.content-wrapper -->
-    {% endblock %}
+    
+    {% block main %} {% endblock %}
+    
+    {% block pages %} {% endblock %}
     
     {% block footer %}
         {% include 'Main/footer.html.twig' %}
     {% endblock %}
-
 {% endblock %}	
