--- a/web/css/custom.css
+++ b/web/css/custom.css
@@ -51,3 +51,37 @@ aside .main-sidebar
 {
     width: 6em;
 }
+
+.color
+{
+    background-color: #F9F9F9;
+}
+
+#paginateTable th
+{
+    background-color: #1A75D1;
+}
+
+#paginateTable tr td
+{
+    border: 0.5px solid #dadada !important;
+}
+
+#paginateTable tr:hover
+{
+    outline: none;
+    border-color: #9ecaed;
+    box-shadow: 0 0 10px darkSlateGray;
+}
+
+.pagination a
+{
+    border: 1px solid #ddd;
+}
+
+.pagination .page a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+.pagination .page a:hover:not(.active) {background-color: #ddd;}
