Add codes for delete, edit

--- a/app/Resources/views/Main/index.html.twig
+++ b/app/Resources/views/Main/index.html.twig
@@ -27,8 +27,9 @@
                         </a>
                         <ul class="treeview-menu">
                             <li><a href="{{ path('paginate') }}"><i class="fa fa-users text-aqua"></i> View Records</a></li>
-                            <li><a href="pages/charts/morris.html"><i class="fa fa-pencil text-orange"></i> Edit Record</a></li>
-                            <li><a href="{{ path('renderAdd') }}"><i class="fa fa-plus text-green"></i> Add Record</a></li>            
+                            <li><a href="{{ path('renderAdd') }}"><i class="fa fa-plus text-green"></i> Add Record</a></li>
+                            <li><a href="pages/charts/morris.html"><i class="fa fa-pencil text-orange"></i> Edit Record (TO DO)</a></li>
+                            <li><a href="pages/charts/morris.html"><i class="fa fa-user-times text-red"></i> Delete Record (TO DO)</a></li>
                         </ul>
                     </li>
 
