--- a/app/Resources/views/Patient/view.html.twig
+++ b/app/Resources/views/Patient/view.html.twig
@@ -35,13 +35,14 @@
                                 <tr>
                                     <th style="width: 10px;text-align: center;">id</th>
                                     <th style="width: 8em;text-align: center;">First Name</th>
-                                    <th style="width: 3em;text-align: center;">Middle In</th>
+                                    <th style="width: 3em;text-align: center; white-space: nowrap;">Mid In</th>
                                     <th style="width: 8em;text-align: center;">Last Name</th>
                                     <th style="width: 4em;text-align: center;">Sex</th>
                                     <th style="width: 4em;text-align: center;">Birthday</th>
                                     <th style="width: 2em;text-align: center;">Age</th>
                                     <th style="width: 5em;text-align: center;">Nationality</th>
                                     <th style="width: 10em;text-align: center;">Address</th>
+                                    <th style="width: 3em;text-align: center;">Action</th>
                                 </tr>
                                 
                                 {% if pagination|default %}
@@ -56,6 +57,14 @@
                                         <td>{{ article.Age }}</td>
                                         <td>{{ article.Nationality }}</td>
                                         <td>{{ article.Address }}</td>
+                                        <td style="width: 3em; white-space: nowrap;"><button type="button" class="btn btn-xs btn-info" title="Edit">
+                                                <i class="fa fa-edit"></i>
+                                            </button>
+                                            &nbsp;
+                                            <button type="button" class="btn btn-xs btn-danger" title="Delete">
+                                                <i class="fa fa-remove"></i>
+                                            </button>
+                                        </td>                                        
                                     </tr>
                                     {% endfor %}
                                 {% endif %}
